--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,11 +27,13 @@ dependencies:
   cupertino_icons: ^1.0.1
   syncfusion_flutter_gauges: ^19.3.48
   syncfusion_flutter_sliders: ^19.3.54
+  countup: ^0.1.3
 
   window_size:
     git:
       url: git://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
+  google_fonts: ^2.1.0
 
 dev_dependencies:
 #  flutter_test:
