--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,28 +18,32 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.14.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  cupertino_icons: ^1.0.1
-  syncfusion_flutter_gauges: ^19.3.48
-  syncfusion_flutter_sliders: ^19.3.54
-  countup: ^0.1.3
+  flutter_localizations:
+    sdk: flutter       
 
   window_size:
     git:
       url: git://github.com/google/flutter-desktop-embedding.git
       path: plugins/window_size
+
+  intl: ^0.17.0
+  cupertino_icons: ^1.0.1
+  syncfusion_flutter_gauges: ^19.3.48
+  syncfusion_flutter_sliders: ^19.3.54
+  countup: ^0.1.3
   google_fonts: ^2.1.0
+  network_info_plus: ^2.1.1
 
 dev_dependencies:
-#  flutter_test:
-#    sdk: flutter
-#  integration_test:
-#    sdk: flutter
+ flutter_test:
+   sdk: flutter
+ integration_test:
+   sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -51,6 +55,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
