--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,10 @@ dependencies:
   syncfusion_flutter_gauges: ^19.3.48
   syncfusion_flutter_sliders: ^19.3.54
   countup: ^0.1.3
+  numberpicker: ^1.2.0
   google_fonts: ^2.1.0
   network_info_plus: ^2.1.1
+  infinite_listview: ^1.1.0
 
 dev_dependencies:
  flutter_test:
