--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.1
   syncfusion_flutter_gauges: ^19.3.48
   syncfusion_flutter_sliders: ^19.3.54
+  clippy_flutter: ^2.0.0-nullsafety.1
   countup: ^0.1.3
   numberpicker: ^1.2.0
   google_fonts: ^2.1.0
