finish first version of accessories ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   google_fonts: ^2.1.0
   network_info_plus: ^2.1.1
   infinite_listview: ^1.1.0
+  card_swiper: ^1.0.4
+  expandable: ^5.0.1
 
 dev_dependencies:
  flutter_test:
