--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   infinite_listview: ^1.1.0
   card_swiper: ^1.0.4
   expandable: ^5.0.1
+  icon_picker: ^2.0.1
 
 dev_dependencies:
  flutter_test:
