--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,17 @@ dependencies:
       path: plugins/window_size
 
   intl: ^0.17.0
+  shared_preferences: ^2.0.9
+  network_info_plus: ^2.1.1
+  json_annotation: ^4.4.0
+
+  google_fonts: ^2.1.0
   cupertino_icons: ^1.0.1
   syncfusion_flutter_gauges: ^19.3.48
   syncfusion_flutter_sliders: ^19.3.54
   clippy_flutter: ^2.0.0-nullsafety.1
   countup: ^0.1.3
   numberpicker: ^1.2.0
-  google_fonts: ^2.1.0
-  network_info_plus: ^2.1.1
   infinite_listview: ^1.1.0
   card_swiper: ^1.0.4
   expandable: ^5.0.1
@@ -47,9 +50,12 @@ dependencies:
 
 dev_dependencies:
  flutter_test:
-   sdk: flutter
+  sdk: flutter
  integration_test:
-   sdk: flutter
+  sdk: flutter
+
+ build_runner: ^2.1.5
+ json_serializable: ^6.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
