--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
-    sdk: flutter       
+    sdk: flutter
 
   window_size:
     git:
@@ -35,6 +35,7 @@ dependencies:
   shared_preferences: ^2.0.9
   network_info_plus: ^2.1.1
   json_annotation: ^4.4.0
+  # flutter_blue: ^0.8.0
 
   google_fonts: ^2.1.0
   cupertino_icons: ^1.0.1
